JBR-4208 [followup] LWCToolkit.invokeAndWait should not stuck on invocation loss